RESOLVED FIXED115277
Downloads need to be converted from the NSURLConnection, not canceled and restarted, when using the NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=115277
Summary Downloads need to be converted from the NSURLConnection, not canceled and res...
Anders Carlsson
Reported 2013-04-26 14:26:34 PDT
Downloads need to be converted from the NSURLConnection, not canceled and restarted, when using the NetworkProcess
Attachments
Patch (13.47 KB, patch)
2013-04-26 14:29 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-04-26 14:29:04 PDT
Anders Carlsson
Comment 2 2013-04-26 14:38:30 PDT
Note You need to log in before you can comment on or make changes to this bug.